<resources>
    <string name="app_name">SquashApp_Test</string>
    <string name="share">Share</string>
    <string name="report">Report</string>
    <string name="eleanor_pena">Eleanor Pena</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="views">Views</string>
    <string name="likes">Likes</string>
    <string name="follow">Follow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>